--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
 
     <!-- Your CSS Linked Below-->
     <link rel="stylesheet" href="css/style.css" />
@@ -31,8 +31,8 @@
       <div class="moviePoster"></div>
       <div class="info">
       <div class="movieTitle"></div>
-      <div class="releaseDate">Release Date:</div>
-      <div class="description">Description:</div>
+      <div class="releaseDate"></div>
+      <div class="description"></div>
       </div>
     </div>
 
